testsuite/tests/contrib/lkt_semantic/invalid_type_ref/test.lkt
generic [T]
class U {
}

a: U

class V: U {
}
