testsuite/tests/contrib/lkt_semantic/invalid_type_ref/test.out
Resolving test.lkt
==================
test.lkt:5:4: error: Invalid type reference
5 | a: U
  |    ^

Id   <RefId "U" test.lkt:5:4-5:5>
     references <GenericDecl "U" test.lkt:1:1-3:2>

test.lkt:7:10: error: Invalid type reference
7 | class V: U {
  |          ^

Id   <RefId "U" test.lkt:7:10-7:11>
     references <GenericDecl "U" test.lkt:1:1-3:2>

